# valinor-prompt-forge

./: .gitignore  FORGE_OUTPUT_AND_HANDOFF_FIX_REPORT.md  README.md  program.md  pyproject.toml
Evidence/visual-ux-audit-20260528-1456/logs/: api-live-initial.json  process-state.txt
Evidence/visual-ux-audit-20260528-1456/patches/: initial-diff.patch  no-patches.md
Evidence/visual-ux-audit-20260528-1456/reports/: bug-fixes.md  coverage-baseline.json  coverage-baseline.md  defects.md  expectations.md  final-validation.md  improvements.md  status-matrix.md  validation-plan.md  visual-ux-audit.md
Evidence/visual-ux-audit-20260528-1456/runs/: run-00-setup.txt  run-01-launch.txt  run-02-browser-flow.txt  run-03-final-validation.txt
benchmarks/expr-eval/: README.md  package.json
benchmarks/git-log-summary/: .gitignore  README.md  package-lock.json  package.json
benchmarks/git-log-summary/.opencode/agent/: forge-generator.md  forge-planner.md  forge-validator.md
benchmarks/git-log-summary/src/: summarize.js
benchmarks/git-log-summary/tests/: summarize.test.js
benchmarks/json-patch/: README.md  package.json
benchmarks/task-api/: README.md  package.json
forge/: __init__.py  __main__.py  agent_cli.py  config.py  dashboard.py  experiment.py  judge.py  orchestrator.py  progress.py  promote.py  proposer.py  quality.py  scorer.py  state.py
golden/expr-eval/: evaluate.test.js
golden/json-patch/: apply.test.js
golden/task-api/: api.test.js
prompts/champion/: generator.md  planner.md
prompts/seed/: validator.md
tests/: test_forge_loop.py
