[project]
name = "valinor-prompt-forge"
version = "0.1.0"
description = "Autoresearch loop for optimizing Valinor's planner/generator/validator system prompts against a local model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39.0",
    "requests>=2.32.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "jinja2>=3.1.4",
    "pydantic>=2.9.0",
    "pyyaml>=6.0.2",
]
