[project]
name = "valinor-prompt-forge"
version = "0.1.0"
description = "Autoresearch loop for optimizing Valinor's planner/generator/validator system prompts against a local model"
readme = "README.md"
requires-python = ">=3.10"
# No Anthropic SDK / API key: the proposer and judge shell out to the authed
# `claude` CLI (forge/agent_cli.py). Only the dashboard needs runtime deps.
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[project.scripts]
forge = "forge.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["forge"]
